--- a/outside-demo/pages/demo/edit/index.wxml
+++ b/outside-demo/pages/demo/edit/index.wxml
@@ -13,6 +13,6 @@
     <track-list bottom="{{200}}" bindtrackTap="onTapSelectEffect" show="{{active === 'none'}}"></track-list>
     <music-list  show="{{active === 'music'}}"></music-list>
     <filter-list  show="{{active === 'filter'}}"></filter-list>
-    <wj-texteditor  wx:if="{{active==='text'}}" bindconfirm="onConfirmText" bindclose="onTextEditorClose"/>
+    <wj-texteditor  show="{{active==='text'}}" bindconfirm="onConfirmText" bindclose="onTextEditorClose"/>
     <effect-list id="effect_cp" bindsetActive="setActive"  show="{{active === 'effect'}}"></effect-list>
 </view>
