fix: 声音叠加问题

--- a/outside-demo/pages/demo/edit/index.wxml
+++ b/outside-demo/pages/demo/edit/index.wxml
@@ -6,11 +6,11 @@
             mode="default"
             enablePauseIcon="{{showPauseIcon}}"
             bindready="onEditReady"
-            allowSetVolume="{{true}}"></wj-player>
+            allowSetVolume="{{false}}"></wj-player>
     </view>
 
     <!-- 播放器控制面板，偏UI，不用太关注 -->
-    <track-list bottom="{{200}}" bindtrackTap="onTapSelectEffect" show="{{active === 'none'}}"></track-list>
+    <track-list bottom="{{100}}" bindtrackTap="onTapSelectEffect" show="{{active === 'none'}}"></track-list>
     <music-list  show="{{active === 'music'}}"></music-list>
     <filter-list  show="{{active === 'filter'}}"></filter-list>
     <wj-texteditor  show="{{active==='text'}}" bindconfirm="onConfirmText" bindclose="onTextEditorClose"/>
